# utiso-secure-pipeline

./: .gitignore  ANSWERS.md  Dockerfile  README.md  pyproject.toml  requirements-dev.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
app/: main.py
tests/: test_main.py
