[project]
name = "utiso-secure-pipeline"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
# S101 (assert) is fine in tests.
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
# Put the repo root on sys.path so `from app.main import app` resolves without
# an editable install (we run bare `pytest` in CI).
pythonpath = ["."]
